Added more Python Intro Code

--- a/Python Primer.ipynb
+++ b/Python Primer.ipynb
@@ -6,20 +6,123 @@
    "source": [
     "# A Python Primer\n",
     "### An unfriendly introduction to Python data structures and tricks\n",
-    "#### Ruihang Du\n",
-    "\n",
-    "Import print function from Python3, ignore this line if you are already using Python3."
+    "#### Ruihang Du\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primitive Types in Python\n",
+    "this include strings, ints , floats, boolean "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "helloworld\n",
+      "1200\n",
+      "12.34\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "from __future__ import print_function"
+    "# a string is a sequence of characters\n",
+    "str_a = \"hello\" # Creates a String\n",
+    "str_b = \"world\" # creates another string\n",
+    "print(str_a + str_b) # concatenates two strings and prints them\n",
+    "\n",
+    "# ints are whole numbers\n",
+    "int_a = 1200\n",
+    "print(int_a)\n",
+    "\n",
+    "# floats are arbitrary precision numbers\n",
+    "float_b = 12.34\n",
+    "print(float_b)\n",
+    "\n",
+    "# booleans are true and false values\n",
+    "b_true = True\n",
+    "b_false = False\n",
+    "\n",
+    "# Boolean operations can be performed in python in a number of ways\n",
+    "print(not b_true) # prints false\n",
+    "print(b_true and b_false) # prints false because true && false is false\n",
+    "print(b_true or b_false) # prints true because true || false is true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Flow Control\n",
+    "flow control is ways of redirecting program execution.\n",
+    "\n",
+    "conditional: if / elif / else\n",
+    "\n",
+    "loops: while, for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a is 3\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# an if statement checks if a condition is true and executes the statement following it\n",
+    "# an elif follows and if statement, and only runs if the original if fails\n",
+    "# an else will catch any condition not handled by an if and elif\n",
+    "\n",
+    "a = 3\n",
+    "\n",
+    "if a == 5:\n",
+    "    print(\"a is 5\")\n",
+    "elif a == 3:\n",
+    "    print(\"a is 3\")\n",
+    "else:\n",
+    "    print(\"a is not 3 or 5\")\n",
+    "\n",
+    "\n",
+    "# a while loop runs as long as a condition is true. \n",
+    "# equivalent to a while loop in any otherlanguage\n",
+    "\n",
+    "while(a > 0):\n",
+    "    print(a)        # prints 3, 2, 1\n",
+    "    a -= 1\n",
+    "\n",
+    "# a for loop runs through a range/iterable of values\n",
+    "\n",
+    "for i in range(10): # range returns an iterable of 0, 1 .. 9 \n",
+    "    print(i)        # prints 0, 1 .. 9"
    ]
   },
   {
@@ -32,12 +135,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "4\n",
+      "3 3\n",
+      "[1, 2, 3, 'a']\n",
+      "[1, 2, 3, 'a']\n",
+      "[1]\n",
+      "[1, 2, 3]\n",
+      "[2, 3, 'a']\n",
+      "[1, 2, 3, 'a', 'b']\n",
+      "b [1, 2, 3, 'a']\n",
+      "1 [2, 3, 'a']\n",
+      "[2, 'a']\n",
+      "[2, 'a', 1, 'a']\n",
+      "[2, 1, 'a']\n",
+      "True\n",
+      "4\n",
+      "1\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Data structure 1 -- List\n",
     "a = [1, 2, 3, 4]    # Create a list\n",
@@ -72,7 +199,14 @@
     "a.remove('a')    # Remove the first occurance of 'a'\n",
     "print(a)         # Prints \"[2, 1, 'a']\"\n",
     "\n",
-    "print(2 in a)    # Check if 2 is an element of the list; prints \"True\""
+    "print(2 in a)    # Check if 2 is an element of the list; prints \"True\"\n",
+    "\n",
+    "\n",
+    "b = [1, 2, 3, 4] # redefine list a\n",
+    "\n",
+    "print(max(b))    # Prints the maximum value in the list b\n",
+    "print(min(b))    # Prints the minimum value in the list b\n",
+    "print(sum(b))    # Prints the sum of all the valuse in list b"
    ]
   },
   {
@@ -87,9 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Data structure 2 -- Dictionary\n",
@@ -139,9 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Data structure 3 -- Tuple\n",
@@ -181,9 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# List comprehension\n",
@@ -204,9 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Dictionary comprehension\n",
@@ -233,9 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Lambda expression\n",
@@ -263,13 +387,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9, 16, 25, 36]\n",
+      "[1, 4, 9, 16, 25, 36]\n",
+      "[2, 4, 6]\n",
+      "[2, 4, 6]\n",
+      "21\n",
+      "21\n"
+     ]
+    }
+   ],
    "source": [
     "# Map, Filter, Reduce\n",
+    "import functools\n",
     "\n",
     "l_1 = [1, 2, 3, 4, 5, 6]\n",
     "\n",
@@ -291,7 +427,7 @@
     "s_1 = sum(l_1)    # One way to sum all elements in a list\n",
     "print(s_1)        # Prints \"21\"\n",
     "\n",
-    "s_2 = reduce(lambda x, y: x + y, l_1)\n",
+    "s_2 = functools.reduce(lambda x, y: x + y, l_1)\n",
     "''' What is happening in here is that\n",
     "    the lambda function is continuously\n",
     "    applied to 2 adjacent elements in the list\n",
@@ -308,25 +444,44 @@
     "    And so 21 is returned '''\n",
     "print(s_2)       # Prints \"21\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Additional Resources\n",
+    "\n",
+    "- https://docs.python.org/3/\n",
+    "- https://www.hackerrank.com/domains/python\n",
+    "- https://codingbat.com/python\n",
+    "- https://learnpythonthehardway.org/python3/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
